<?xml version="1.0"?>
<package>
  <name>jasadc</name>
  <version>0.0.1</version>
  <description>The jasadc package</description>

  <maintainer email="-1@case.edu">JAS</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/jstarkman/jasadc</url>

  <author email="-1@case.edu">JAS</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
