<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>jasadc</name>
  <version>1.0.0</version>
  <description>The jasadc package</description>
  <maintainer email="-1@case.edu">JAS</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/jstarkman/jasadc</url>
  <author email="-1@case.edu">JAS</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmw_implementation</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
